Create universe - switch timestamp code to use now() from php instead, which offloads work to php and is more portable
Create universe - improve SQL calls to use column names in more places, omit un-needed/default settings in sql calls, and make debugging slightly easier
Create universe - Add new variables for Game Admin name, ship name, and zone name (and use them during CU)

TheKabal (12 May 2013)
--------------------------------------
Recoded create_universe and the schemas to support running on postgresql, which brings some benefits of correctness in code to mysql as well.

TheKabal (1 April 2013)
--------------------------------------
BntText::gotoMain needs $db and $lang to pass to BntTranslate::load
load_languages has been replaced with the new class & method BntTranslate::load, which returns the $langvars array. No joke.

TheKabal (16 March 2013)
--------------------------------------
Replace old $l_whatever language variables with new $langvars variables instead.

TheKabal (9 March 2013)
--------------------------------------
defence_vs_defence has been replaced with BntDefense::defence_vs_defence
is_loan_pending has been replaced with BntIbank::is_loan_pending
ini_to_db has been replaced with BntFile::ini_to_db
create_schema has been replaced with BntSchema::create
destroy_schema has been replaced with BntSchema::destroy
calc_avg_tech has been replaced with CalcLevels::avgTech
get_planet_owner has been replaced with BntPlanets::getOwner
get_previous_day & get_next_day has been replaced with BntNews::previousDay & BntNews::nextDay
scan_error has been replaced with BntScan::error
calc_planet_torps has been replaced with CalcLevels::planetTorps
calc_planet_shields has been replaced with CalcLevels::planetShields
calc_planet_beams has been replaced with CalcLevels::planetBeams
collect_bounty has been replaced with BntBounty::collect
kick_off_planet has been replaced with BntShip::leavePlanet
player_insignia_name has been replaced with BntPlayer::getInsignia